<resources>
    <string name="app_name">CalculatorNurgazy</string>
    <string name="ac">AC</string>
    <string name="unknown_operation">+/-</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="send">send</string>
    <string name="category">Category</string>
    <string name="explore_the_night_life_of_your_city">Explore the night life of your city</string>
    <string name="free">Free</string>
    <string name="price">Price💰</string>
    <string name="participants">Participants</string>
    <string name="accessibility">Accessibility</string>
    <string name="next">Next</string>
    <string name="price_slider">Price</string>
    <string-array name="spinner_items" >
        <item>Type</item>
        <item>Pokushac</item>
        <item>Popit</item>
    </string-array>
    <array name="initial_slider_values">
        <item>20.0</item>
        <item>70.0</item>
    </array>
</resources>