<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/send"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linear_container"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clipToPadding="false"
            android:paddingHorizontal="28dp">

            <TextView
                android:id="@+id/main_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="72sp" />

        </HorizontalScrollView>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/all_clear_btn"
                style="@style/Base.ButtonIphoneOperation"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hz_operation"
                style="@style/Base.ButtonIphoneOperation"
                android:layout_marginHorizontal="12dp"
                android:text="@string/unknown_operation" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent_btn"
                style="@style/Base.ButtonIphoneOperation"
                android:layout_marginEnd="12dp"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide_btn"
                style="@style/Base.ButtonOperation"
                android:text="@string/divide" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_btn"
                style="@style/Base.ButtonNumber"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginHorizontal="12dp"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginEnd="12dp"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply_btn"
                style="@style/Base.ButtonOperation"
                android:text="@string/multiply" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_btn"
                style="@style/Base.ButtonNumber"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginHorizontal="12dp"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginEnd="12dp"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus_btn"
                style="@style/Base.ButtonOperation"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_btn"
                style="@style/Base.ButtonNumber"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginHorizontal="12dp"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginEnd="12dp"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_btn"
                style="@style/Base.ButtonOperation"
                android:onClick="onOperationClick"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero_btn"
                style="@style/Base.ButtonNumber"
                android:layout_width="172dp"
                android:paddingHorizontal="32dp"
                android:text="@string/zero"
                android:textAlignment="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/point_btn"
                style="@style/Base.ButtonNumber"
                android:layout_marginHorizontal="8dp"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal_btn"
                style="@style/Base.ButtonOperation"
                android:onClick="onOperationClick"
                android:text="@string/equal" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>