<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:paddingHorizontal="8dp"
    tools:context=".BoredActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <TextView
                android:id="@+id/category_card_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/category_bg"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/favourite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/favourite_bg"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:src="@drawable/ic_heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/night_life_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/explore_the_night_life_of_your_city"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_card_tv" />

            <TextView
                android:id="@+id/free_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="28dp"
                android:text="@string/free"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/dark_blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/free_tv"
                app:layout_constraintStart_toStartOf="@id/free_tv"
                app:layout_constraintTop_toBottomOf="@id/free_tv" />

            <ImageView
                android:id="@+id/participants_icons"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:src="@drawable/img"
                app:layout_constraintBottom_toBottomOf="@id/free_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textColor="@color/dark_blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/participants_icons"
                app:layout_constraintStart_toStartOf="@id/participants_icons"
                app:layout_constraintTop_toBottomOf="@id/participants_icons" />

            <TextView
                android:id="@+id/progress_tv"
                android:layout_width="80dp"
                android:layout_height="16dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/progress_bg"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/accessibility"
                android:textColor="@color/dark_blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/progress_tv"
                app:layout_constraintStart_toStartOf="@id/progress_tv"
                app:layout_constraintTop_toBottomOf="@id/progress_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/next_bg"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <TextView
        android:id="@+id/category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/next_btn"
        app:layout_constraintTop_toBottomOf="@id/next_btn" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/spinner_bg"
        android:entries="@array/spinner_items"
        app:layout_constraintStart_toStartOf="@id/category_tv"
        app:layout_constraintTop_toBottomOf="@id/category_tv" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/spinner_type"
        app:layout_constraintEnd_toEndOf="@id/spinner_type"
        app:layout_constraintTop_toTopOf="@id/spinner_type" />

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/price_slider"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/category_tv"
        app:layout_constraintStart_toStartOf="@id/price_slider"
        app:layout_constraintTop_toTopOf="@id/category_tv" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintBottom_toBottomOf="@id/spinner_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner_type"
        app:layout_constraintTop_toTopOf="@id/spinner_type"
        app:values="@array/initial_slider_values" />

    <TextView
        android:id="@+id/accessibility_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/accessibility"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/price_tv"
        app:layout_constraintTop_toBottomOf="@id/price_slider" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/accessibility_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner_type"
        app:layout_constraintTop_toBottomOf="@id/accessibility_tv"
        app:values="@array/initial_slider_values" />


</androidx.constraintlayout.widget.ConstraintLayout>